data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectBranchTargetResolution_3895.wast
;; 4. **Test Description:**    Utilize a `call_indirect` instruction that calls a function with multiple branching paths using `br_table`. Construct the test where the branch table should direct execution flow to different labels. Cross-check to ensure the flow reaches the correct labels by verifying expected stack changes.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (func $branch1 (param i32) (result i32) (local.get 0))
    (func $branch2 (param i32) (result i32) (i32.const 42))
    (table 2 funcref (elem $branch1 $branch2))
    (elem func $branch1 $branch2)
    (func $test 
      (i32.const 1) 
      (call_indirect (type $sig) (i32.const 0))
      (block $default 
        (block $label0
          (br_table $label0 $default (i32.const 3)) ;; invalid jump index
        )
      )
    )
  )
  "type mismatch"
)